@@ -2,6 +2,7 @@
 
 	Bugfixes:
 
+	all : fixed rest args typing for overloaded functions (#10143)
 	hl : fixed debugging of `catch` blocks (#10109)
 
 2021-02-26 4.2.1:
